# MIA

./: .gitignore  README.md  pyproject.toml
PLN2/: README.md
PLN2/personal_shopper/: shop-razona.py
RL2/: .gitignore  DOCUMENTATION.md  README.md  requirements.txt  train_agents.ipynb  train_cartpole.py
RL2/agents/: Base_Agent.py  double_dqn_agent.py  dqn_agent.py  dueling_dqn_agent.py
RL2/exploration_strategies/: Base_Exploration_Strategy.py
RL2/networks/: qnetwork.py
RL2/utilities/data_structures/: Replay_Buffer.py
VPC3/: README.md
VPC3/TrabajosPracticos/TP1/: TP1.ipynb
VPC3/TrabajosPracticos/TP2/: TP2.ipynb
agentes/: cv_agent_system.py  indexer.py
nlp_2/: init.py
rag/: indexer.py  retrieving.py
